# webeditor

./: .gitignore  README.md  app.py  justfile  pyproject.toml
src/lanpartydb_webeditor/: application.py  forms.py
src/lanpartydb_webeditor/static/style/: style.css
src/lanpartydb_webeditor/templates/: base.html  create_offline_party_form.html  create_online_only_party_form.html  create_series_form.html  index.html
src/lanpartydb_webeditor/templates/macros/: forms.html
