[project]
name = "lanpartydb-webeditor"
version = "0.1.0dev1"
description = "Web-based interface to create data files for the OrgaTalk LAN Party Database"
authors = [
    { name = "Jochen Kupperschmidt", email = "homework@nwsnet.de" }
]
readme = "README.md"
requires-python = ">= 3.11"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "flask>=3.1.3",
    "lanpartydb>=0.13.0",
    "wtforms>=3.2.1",
]

[project.urls]
Repository = "https://github.com/lanpartydb/webeditor"

[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"

[dependency-groups]
server = [
    "granian>=2.7.3",
]

[tool.ruff.format]
quote-style = "single"
line-ending = "lf"

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
lines-after-imports = 2
order-by-type = false

[tool.uv]
required-version = ">=0.11.3"
